Zaczęty opis do przypadków użycia

--- a/main.tex
+++ b/main.tex
@@ -696,6 +696,8 @@ Po dodaniu kilku instruktorów lista wygląda tak, jak to przedstawia rysunek \r
 \chapter{Klient dla systemu Android - korzystanie}
 
 \section{Przypadki użycia}
+Rysunek \ref{fig:Diagram przypadków użycia} wizualizuje akcje możliwe do wykonania przez użytkowników aplikacji.
+
 \begin{figure}[H]
 \centering
 \includegraphics[width=1\textwidth]{screenshots/uml/usecases.png}
